#7029 fix(style): apply positioning to InpageNav component to prevent gap forming between header and following content

--- a/src/components/PageHeader/_page-header.scss
+++ b/src/components/PageHeader/_page-header.scss
@@ -105,6 +105,7 @@
   @include grid-column(1, 7);
   @include grid-row(2);
   margin-bottom: var(--space-xl);
+  position: relative;
   
   @include mq(sm) {
     @include grid-column(1, 13);
